--- a/AARTI.html
+++ b/AARTI.html
@@ -1,42 +1,26 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="stylee.css">
-<meta charset="utf-8">
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-<title>Module 2 solution</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="stylee.css">
 </head>
 <body>
-<h1>FOOD ITEM</h1>
-<div class='row'>
-	<div class='col-lg-4 col-md-6 sx-12'>
-		<div class='section'>
-			<span id='pp1'>BIRYANI</span>
-				<p>Chicken Biryani is a delicious savory rice dish that is loaded 
-                    with spicy marinated chicken, caramelized onions, and flavorful saffron rice. For my Biryani,
-                    I simplify the order of operations, while retaining the traditional layered approach to 
-                    assembling it.
-                </p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-6 sx-12'>
-		<div class='section'>
-			<span id='pp2'>Tandoori</span>
-				<p>Tandoori chicken is a chicken dish prepared by roasting chicken 
-                    marinated in yogurt and spices in a tandoor, a cylindrical clay oven. The dish originated from 
-                    the Indian subcontinent and is popular in many other parts of the world.
-                </p>
-		</div>
-	</div>
-	<div class='col-lg-4 col-md-12 sx-12'>
-		<div class='section'>
-			<span id='pp3'>DAL MAKHANI</span>
-				<p> Dal makhani or dal makhni (pronounced daal makh-nee, "buttery 
-                    lentils") is a dish originating from the Punjab region of the Indian subcontinent. The primary
-                    ingredients are whole black lentils (urad), red kidney beans (rajma), butter and cream. 
-                </p>
-		</div>
-	</div>
-</div>
+    <h1>Our Menue</h1>
+    <div class="container">
+    <section id="s1">
+            <h3 >Chicken</h3>
+        <p>Lorem ipsum dolor sit amet consectetur,<br> adipisicing elit. Nostrum, earum sapiente! Vero reiciendis,<br> ipsa molestiae similique cupiditate quos pariatur <br> eum optio sunt sint voluptates, eveniet quaerat,<br> dolor recusandae temporibus numquam.</p>
+    </section>
+    <section id="s2">
+        <h3>Beef</h3>
+        <p>Lorem ipsum dolor sit amet consectetur,<br> adipisicing elit. Nostrum, earum sapiente! Vero reiciendis,<br> ipsa molestiae similique cupiditate quos pariatur <br> eum optio sunt sint voluptates, eveniet quaerat,<br> dolor recusandae temporibus numquam.</p>
+    </section>
+    <section id="s3">
+        <h3>Sushi</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Nostrum, earum sapiente! Vero <br>reiciendis, ipsa molestiae similique cupiditate quos pariatur <br> eum optio sunt sint voluptates, eveniet quaerat,<br> dolor recusandae temporibus numquam.</p>
+    </section>
+    </div>
 </body>
-</html> 
+</html>
